[gd_scene load_steps=27 format=2]

[ext_resource path="res://objects/chars/toybonnie/toybonnie.gd" type="Script" id=1]
[ext_resource path="res://sprites/char/toybonnie/2e5.png" type="Texture" id=2]
[ext_resource path="res://sprites/char/toybonnie/2e4.png" type="Texture" id=3]
[ext_resource path="res://sprites/char/toybonnie/2e7.png" type="Texture" id=4]
[ext_resource path="res://sprites/char/toybonnie/2e1.png" type="Texture" id=5]
[ext_resource path="res://sprites/office/room/717.png" type="Texture" id=6]
[ext_resource path="res://sprites/char/toybonnie/2dc.png" type="Texture" id=7]
[ext_resource path="res://sprites/char/toybonnie/2e2.png" type="Texture" id=8]
[ext_resource path="res://sprites/char/toybonnie/2df.png" type="Texture" id=9]
[ext_resource path="res://sprites/char/toybonnie/2cb.png" type="Texture" id=10]
[ext_resource path="res://sprites/char/toybonnie/2de.png" type="Texture" id=11]
[ext_resource path="res://sprites/char/toybonnie/2e3.png" type="Texture" id=12]
[ext_resource path="res://sprites/char/toybonnie/2e0.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 13 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1661, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "entering"
length = 3.8
step = 0.0666667
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1661, -0.25, 0, 0.25, 0, 279, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3.8 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 3, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3.8 )
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "leaving"
length = 3.8
step = 0.0666667
tracks/0/type = "value"
tracks/0/path = NodePath(".:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 279, -0.25, 0, 0.25, 0, 1661, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3.8 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 3, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3.8 )
}

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "RESET"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "entering"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "leaving"

[sub_resource type="AnimationNodeStateMachineTransition" id=8]

[sub_resource type="AnimationNodeStateMachineTransition" id=9]
switch_mode = 2
auto_advance = true
xfade_time = 4.0

[sub_resource type="AnimationNodeStateMachineTransition" id=10]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachine" id=11]
states/RESET/node = SubResource( 5 )
states/RESET/position = Vector2( 641.667, 56.3333 )
states/entering/node = SubResource( 6 )
states/entering/position = Vector2( 548.333, 145.107 )
states/leaving/node = SubResource( 7 )
states/leaving/position = Vector2( 736.333, 144.333 )
transitions = [ "RESET", "entering", SubResource( 8 ), "entering", "leaving", SubResource( 9 ), "leaving", "RESET", SubResource( 10 ) ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=12]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 197.75, 259 )

[node name="toybonnie" type="Node2D"]
z_index = 2
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
visible = false
texture = ExtResource( 6 )

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( 1661, 3 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )

[node name="animPlayer" type="AnimationPlayer" parent="sprite"]
anims/RESET = SubResource( 2 )
anims/entering = SubResource( 3 )
anims/leaving = SubResource( 4 )

[node name="animTree" type="AnimationTree" parent="sprite"]
tree_root = SubResource( 11 )
anim_player = NodePath("../animPlayer")
active = true
parameters/playback = SubResource( 12 )

[node name="hitbox" type="Area2D" parent="sprite"]

[node name="hitshape" type="CollisionShape2D" parent="sprite/hitbox"]
position = Vector2( 0.25, 10.5 )
shape = SubResource( 13 )

[node name="spawnTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="deathTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="mouse_entered" from="sprite/hitbox" to="." method="mouseTouchingHitbox"]
[connection signal="mouse_exited" from="sprite/hitbox" to="." method="mouseLeavesHitbox"]
[connection signal="timeout" from="spawnTimer" to="." method="spawnChance"]
[connection signal="timeout" from="deathTimer" to="." method="deathTimer"]
